# ece445

./: README.md
digit/: README.md
digit/pcb/glove/esp32/: .gitignore  esp32.kicad_pcb  esp32.kicad_prl  esp32.kicad_pro  esp32.kicad_sch
digit/pcb/glove/nrf5340/: fp-info-cache  nrf5340.csv  nrf5340.kicad_pcb  nrf5340.kicad_prl  nrf5340.kicad_pro
digit/software/glove/: glove.ino
digit/software/glove/ble_imu_ctrl/: .gitignore
digit/software/glove/esp32/: CMakeLists.txt  sdkconfig.defaults
digit/software/glove/flex_sensor_read/: CMakeLists.txt
digit/software/glove/haptic_motor_driver/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
digit/software/robot/: CameraWebServer.ino  app_httpd.cpp
digit/software/robot/CameraWebServer/: .gitignore  CMakeLists.txt  CameraWebServer.ino  app_httpd.cpp  sdkconfig.defaults
digit/software/robot/ble_lidar_motor_control/: CMakeLists.txt
digit/software/robot/bt_lidar_motor_control/: sdkconfig.defaults
digit/software/robot/firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults
digit/software/robot/firmware/main/: CMakeLists.txt  app_httpd.cpp  camera_control.cpp  camera_pins.h  robot_firmware.c
digit/software/robot/triple_lidar_sensing/: CMakeLists.txt
digit/software/robot/wall_e_head_led_blink/: .gitignore  CMakeLists.txt  README.md
digit/software/test/: README.md
digit/software/test/esp32_ble_test/: esp32_ble_test.ino  esp32_ble_test.py
digit/software/test/nrf_ble_test/: nrf_ble_test.ino
lab_notebook/kushls2/: README.md
lab_notebook/roshnim3/: README.md
lab_notebook/suvids2/: README.md
(+50 files in other folders)
